--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,7 +20,7 @@
 <body>
     <header id="header">
         <div id="logo-container">
-            <img id="logo" src="/img/logo.png" alt="Logo Liteflix">
+            <a href="/"><img id="logo" src="/img/logo.png" alt="Logo Liteflix"></a>
         </div>
         <nav id="nav">
             <div id="btn-menu">
@@ -35,7 +35,7 @@
             </div>
             <ul id="menu">
                 <li>
-                    <a href="">Inicio</a>
+                    <a href="/">Inicio</a>
                 </li>
                 <li>
                     <a href="">Tendencias</a>
