--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -155,6 +155,43 @@ h5 {
   background: linear-gradient(90deg, var(--primary-color) 50%, #000000 50%);
 }
 
+
+[type="email"],
+[type="password"],
+[type="text"],
+[type="number"],
+[type="file"] {
+  padding: 12px 16px;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px var(--default-color) solid;
+  height: 32px;
+  color: var(--default-color);
+}
+
+[type="email"]:focus,
+[type="password"]:focus,
+[type="text"]:focus,
+[type="number"]:focus,
+[type="file"]:focus {
+  outline: none;
+  border-bottom: 1px var(--primary-color) solid;
+}
+
+button {
+  background-color: var(--default-color);
+  padding: 10px 16px;
+  border: none;
+  border-radius: 10px;
+}
+
+.btn-primary {
+  background-color: var(--primary-color);
+  color: var(--default-color);
+}
+
 @media (max-width: 600px) {
   .hidde-sm {
     display: none;
