--- a/src/views/login.html
+++ b/src/views/login.html
@@ -20,7 +20,7 @@
 <body>
     <header id="header">
         <div id="logo-container">
-            <img id="logo" src="/img/logo.png" alt="Logo Liteflix">
+            <a href="/"><img id="logo" src="/img/logo.png" alt="Logo Liteflix"></a>
         </div>
         <nav id="nav">
             <div id="btn-menu">
@@ -65,9 +65,9 @@
             <form class="login-form">
                 <input type="text" placeholder="Correo">
                 <input type="password" placeholder="Contraseña">
-                <button type="submit">Iniciar sesión</button>
+                <button type="submit" class="btn-primary">Iniciar sesión</button>
             </form>
-            <p class="body2">¿No tienes cuenta? <a href="/register">Registrate</a></p>
+            <p class="body2">¿No tienes cuenta? <a href="/user/register">Registrate</a></p>
         </section>
     </main>
 
