--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,77 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('partials/head', { styles: ['register'], title: 'Registrate' }) %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liteflix - Login</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/register.css">
-</head>
+    <%- include('./partials/header') %>
 
-<body>
-    <header id="header">
-        <div id="logo-container">
-            <a href="/"><img id="logo" src="/img/logo.png" alt="Logo Liteflix"></a>
-        </div>
-        <nav id="nav">
-            <div id="btn-menu">
-                <span class="material-symbols-outlined">
-                    menu
-                </span>
-            </div>
-            <div id="search-bar">
-                <span class="material-symbols-outlined">
-                    search
-                </span>
-            </div>
-            <ul id="menu">
-                <li>
-                    <a href="/">Inicio</a>
-                </li>
-                <li>
-                    <a href="">Tendencias</a>
-                </li>
-                <li>
-                    <a href="">
-                        <span class="hidde-md material-symbols-outlined">
-                            notifications
-                        </span>
-                        <span class="hidde-lg">Notificaciones</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <span class="hidde-md material-symbols-outlined">
-                            person
-                        </span>
-                        <span class="hidde-lg">Cuenta</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main id="main" class="register-container">
-        <section class="register-form-container">
-            <h6 class="title">Registrate</h6>
-            <form class="register-form">
-                <input type="text" placeholder="Nombre">
-                <input type="text" placeholder="Correo">
-                <input type="password" placeholder="Contraseña">
-                <button type="submit" class="btn-primary">Registrate</button>
-            </form>
-            <p class="body2">¿Ya tienes cuenta? <a href="/user/login">Inicia sesión</a></p>
-        </section>
-    </main>
+        <main id="main" class="register-container">
+            <section class="register-form-container">
+                <h6 class="title">Registrate</h6>
+                <form class="register-form">
+                    <input type="text" placeholder="Nombre">
+                    <input type="text" placeholder="Correo">
+                    <input type="password" placeholder="Contraseña">
+                    <button type="submit" class="btn-primary">Registrate</button>
+                </form>
+                <p class="body2">¿Ya tienes cuenta? <a href="/user/login">Inicia sesión</a></p>
+            </section>
+        </main>
 
-</body>
-
-</html>
+        <%- include('./partials/footer') %>
