feat: create data json and models

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,63 +3,40 @@
     <%- include('./partials/header') %>
 
         <main id="main">
-            <section id="banner">
-                <p class="categories">Animación, Accion, Aventura, Fantasia, Drama</p>
-                <h5 class="title">Demon Slayer - Kimetsu no Yaiba - The Movie: Mugen Train (2020)</h5>
+            <section id="banner" style=" background-image: radial-gradient(
+                circle,
+                rgba(255, 255, 255, 0) 50%,
+                rgba(0, 0, 0, 1) 100%
+              ),
+              linear-gradient(to top, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 100%),
+              url(/img/movies/<%= movies?.[0].images?.[0].url %>);">
+                <p class="categories">
+                    <%= movies?.[0].categories?.map(category=> category.name).join(', ') %>
+                </p>
+                <h5 class="title">
+                    <%= movies?.[0].title %>
+                </h5>
                 <div class="stars-container">
-                    <div class="star checked-star"></div>
-                    <div class="star checked-star"></div>
-                    <div class="star checked-star"></div>
-                    <div class="star middle-star"></div>
-                    <div class="star"></div>
+                    <% for (let index=0; index < movies?.[0].rating; index++) { %>
+                        <div class="star checked-star"></div>
+                        <% } %>
+                            <% for (let index=0; index < 5 - movies?.[0].rating; index++) { %>
+                                <div class="star"></div>
+                                <% } %>
                 </div>
                 <h6 class="subtitle">Descripción general</h6>
-                <p class="body2 description">Tanjirō Kamado, junto con Inosuke Hashibira, un chico criado por jabalíes
-                    que lleva una
-                    cabeza de jabalí, y Zenitsu Agatsuma, un chico asustadizo que revela su verdadero poder cuando
-                    duerme, aborda el
-                    Tren Infinito en una nueva misión con el Hashira del Fuego, Kyōjurō Rengoku, para derrotar a un
-                    demonio que ha
-                    estado atormentando a la gente y matando a los cazadores de demonios que se le oponen!</p>
+                <p class="body2 description">
+                    <%= movies?.[0].description %>
+                </p>
             </section>
             <section class="movies-container">
                 <h6 class="title">Tendencias</h6>
                 <div class="carrousel">
-                    <div class="movie-card">
-                        <img src="/img/movies/demonslayer.png" alt="Movie 1">
-                    </div>
-                    <div class="movie-card">
-                        <img src="/img/movies/outside-the-wire.png" alt="Movie 2">
-                    </div>
-                    <div class="movie-card">
-                        <img src="/img/movies/kong-poster.png" alt="Movie 3">
-                    </div>
-                    <div class="movie-card">
-                        <img src="/img/movies/mortal-combat.png" alt="Movie 4">
-                    </div>
-                    <div class="movie-card">
-                        <img src="/img/movies/avenger-endgame.png" alt="Movie 5">
-                    </div>
-                </div>
-            </section>
-            <section class="movies-container">
-                <h6 class="title">Populares</h6>
-                <div class="carrousel">
-                    <div class="movie-card">
-                        <img src="/img/movies/demonslayer.png" alt="Movie 1">
-                    </div>
-                    <div class="movie-card">
-                        <img src="/img/movies/outside-the-wire.png" alt="Movie 2">
-                    </div>
-                    <div class="movie-card">
-                        <img src="/img/movies/kong-poster.png" alt="Movie 3">
-                    </div>
-                    <div class="movie-card">
-                        <img src="/img/movies/mortal-combat.png" alt="Movie 4">
-                    </div>
-                    <div class="movie-card">
-                        <img src="/img/movies/avenger-endgame.png" alt="Movie 5">
-                    </div>
+                    <% movies.forEach((movie)=> { %>
+                        <div class="movie-card">
+                            <img src="/img/movies/<%= movie.images?.[0].url %>" alt="Movie 1">
+                        </div>
+                        <% }) %>
                 </div>
             </section>
         </main>
